--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,9 @@
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <title>Mango Tree</title>
   <base href="/">
+  <meta name="Description" content="MangoTree is a state of the art communications platform. We provide sms solutions for digital marketing and campaign creation.">
+  <meta name="Keywords" content="mangotree, mangotreepk,sms,solution,whatsapp,facebook,digital,marketing,digital marketing,telenor,zong,4g,email,latest,trends,2019">
+  
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
