after compression and angular production

--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
     }
   </style>
 
-</head>
+<link href="styles.d41d8cd98f00b204e980.bundle.css" rel="stylesheet"/></head>
 <body>
     <app-root>
         <style>
@@ -92,7 +92,7 @@
         &nbsp;<strong>MANGOTREE</strong><sup style="font-size:small">&copy;</sup>&nbsp;
         <span class="d">.</span><span class="d d-2">.</span><span class="d d-3">.</span>
       </app-root>
-<script type="text/javascript" src="inline.bundle.js"></script><script type="text/javascript" src="polyfills.bundle.js"></script><script type="text/javascript" src="styles.bundle.js"></script><script type="text/javascript" src="vendor.bundle.js"></script><script type="text/javascript" src="main.bundle.js"></script></body>
+<script type="text/javascript" src="inline.963afd6bdc24a9feb93d.bundle.js"></script><script type="text/javascript" src="polyfills.b10f03ed146a46e46ea5.bundle.js"></script><script type="text/javascript" src="vendor.8cb42078c9d248b81cc4.bundle.js"></script><script type="text/javascript" src="main.3ff573639e3ec30bfeea.bundle.js"></script></body>
 
 
 
