added meta tags

--- a/angular-src/src/index.html
+++ b/angular-src/src/index.html
@@ -2,11 +2,23 @@
 <html>
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-  <title>Mango Tree</title>
+  <title>MangoTree</title>
   <base href="/">
   <meta name="Description" content="MangoTree is a state of the art communications platform. We provide sms solutions for digital marketing and campaign creation.">
   <meta name="Keywords" content="mangotree, mangotreepk,sms,solution,whatsapp,facebook,digital,marketing,digital marketing,telenor,zong,4g,email,latest,trends,2019">
   
+  <meta name="robots" content="index, follow" />
+  <meta name="keywords" content="mangotree, mangotreepk,sms,solution,whatsapp,facebook,digital,marketing,digital marketing,telenor,zong,4g,email,latest,trends,2019">
+  <meta name="description" content="MangoTree is a state of the art communications platform. We provide sms solutions for digital marketing and campaign creation ..">
+  <meta property="og:title" content="MangoTree - Official " />
+  <meta property="og:description" content="MangoTree is a state of the art communications platform. We provide sms solutions for digital marketing and campaign creation .."
+  />
+  <link rel="canonical" href="https://mangotreepk.herokuapp.com" />
+  <meta property="og:url" content="https://mangotreepk.herokuapp.com/" />
+  <meta property="og:image" content="/public/assets/imgs/tree.png" />
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+
+
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
@@ -53,7 +65,7 @@
               Cantarell,
               Helvetica,
               sans-serif;
-          font-size: 2.5em;
+          font-size: 2.0em;
           text-shadow: 2px 2px 10px rgba(0,0,0,0.2);
         }
         body {
@@ -88,7 +100,7 @@
         
 
         </style>
-        <img style="width:5%;height:auto" src="https://cdnb.artstation.com/p/assets/images/images/009/584/165/original/abhilash-nair-mango-plucking-for-gif.gif?1519794381" alt="">
+        <img style="width:7%;height:auto" src="https://cdnb.artstation.com/p/assets/images/images/009/584/165/original/abhilash-nair-mango-plucking-for-gif.gif?1519794381" alt="">
         &nbsp;<strong>MANGOTREE</strong><sup style="font-size:small">&copy;</sup>&nbsp;
         <span class="d">.</span><span class="d d-2">.</span><span class="d d-3">.</span>
       </app-root>
