--- a/public/index.html
+++ b/public/index.html
@@ -2,21 +2,33 @@
 <html>
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-  <title>MangoTree</title>
-  <base href="/">
-  <meta name="Description" content="MangoTree is a state of the art communications platform. We provide sms solutions for digital marketing and campaign creation.">
-  <meta name="Keywords" content="mangotree, mangotreepk,sms,solution,whatsapp,facebook,digital,marketing,digital marketing,telenor,zong,4g,email,latest,trends,2019">
+
   
-  <meta name="robots" content="index, follow" />
-  <meta name="keywords" content="mangotree, mangotreepk,sms,solution,whatsapp,facebook,digital,marketing,digital marketing,telenor,zong,4g,email,latest,trends,2019">
-  <meta name="description" content="MangoTree is a state of the art communications platform. We provide sms solutions for digital marketing and campaign creation ..">
-  <meta property="og:title" content="MangoTree - Official " />
-  <meta property="og:description" content="MangoTree is a state of the art communications platform. We provide sms solutions for digital marketing and campaign creation .."
-  />
-  <link rel="canonical" href="https://mangotreepk.herokuapp.com" />
-  <meta property="og:url" content="https://mangotreepk.herokuapp.com/" />
-  <meta property="og:image" content="/public/assets/imgs/tree.png" />
-  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+  <base href="/">
+  
+  <!-- HTML Meta Tags -->
+<title>MangoTree - Official </title>
+<meta name="description" content="MangoTree is a state of the art communications platform. We provide sms solutions for digital marketing and campaign creation ..">
+
+<!-- Google / Search Engine Tags -->
+<meta itemprop="name" content="MangoTree - Official ">
+<meta itemprop="description" content="MangoTree is a state of the art communications platform. We provide sms solutions for digital marketing and campaign creation ..">
+<meta itemprop="image" content="assets/imgs/tree.png">
+
+<!-- Facebook Meta Tags -->
+<meta property="og:url" content="http://mangotreepk.herokuapp.com">
+<meta property="og:type" content="website">
+<meta property="og:title" content="MangoTree - Official ">
+<meta property="og:description" content="MangoTree is a state of the art communications platform. We provide sms solutions for digital marketing and campaign creation ..">
+<meta property="og:image" content="assets/imgs/tree.png">
+
+<!-- Twitter Meta Tags -->
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="MangoTree - Official ">
+<meta name="twitter:description" content="MangoTree is a state of the art communications platform. We provide sms solutions for digital marketing and campaign creation ..">
+<meta name="twitter:image" content="assets/imgs/tree.png">
+
+<!-- Meta Tags Generated via http://heymeta.com -->
 
 
 
